--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="footer-content">
                 <p>&copy; 2026 Andrew MacIsaac. All Rights Reserved.</p>
                 <div class="footer-social">
-                    <a href="https://www.linkedin.com/in/andrew-macisaac" target="_blank" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/andrew-t-macisaac/" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="mailto:amacisaac95@gmail.com" aria-label="Email">
