--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a href="#contact" class="btn btn-outline">Contact Me</a>
                 </div>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/andrew-macisaac" target="_blank" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/andrew-t-macisaac/" target="_blank" aria-label="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                     <a href="mailto:amacisaac95@gmail.com" aria-label="Email">
