--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="container">
             <h2 class="section-title">Portfolio</h2>
             <p class="section-subtitle">
-                Watch some of my recent broadcast engineering work
+                Watch some of my audio engineering work
             </p>
             <div class="portfolio-grid">
                 <div class="video-container">
@@ -254,7 +254,7 @@
             </div>
             <div style="text-align: center; margin-top: 3rem;">
                 <a href="https://www.youtube.com/@priceproductions970" target="_blank" rel="noopener noreferrer" class="btn btn-outline">
-                    <i class="fab fa-youtube"></i> View Full Channel
+                    <i class="fab fa-youtube"></i> My Broadcast Engineering work
                 </a>
             </div>
         </div>
